<?xml version="1.0" encoding="utf-8"?>

<!-- 
 * Copyright 2013 Juan José Bonnín Sansó (jbonnins@uoc.edu)
 *
 * This file is part of MoveOnApp.
 *
 *    MoveOnApp is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    MoveOnApp is distributed in the hope that it will be useful,
 *    but WITHOUT ANY WARRANTY; without even the implied warranty of
 *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *    Affero GNU General Public License for more details
 *    (https://www.gnu.org/licenses/agpl-3.0.html).
 *    
 *    All the creations are under sanbo package, which is my short surname. 
-->
<!-- PARENT -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/itineraryimage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/Logo"
        android:padding="1dp"
        android:src="@drawable/emt1" />

    <TextView
        android:id="@+id/itineraryname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itineraryimage2"
        android:layout_toRightOf="@+id/itinerarycode2"
        android:text="@string/itinName" />

    <ImageView
        android:id="@+id/itnieraryfavourite2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itineraryname2"
        android:layout_alignParentRight="true"
        android:background="@drawable/star"
        android:contentDescription="@string/isFavourite"
        android:src="@drawable/star_disabled" />

    <TextView
        android:id="@+id/itinerarycode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itineraryname2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/itineraryimage2"
        android:text="@string/itinCode" />

</RelativeLayout>