<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright 2013 Juan José Bonnín Sansó (jbonnins@uoc.edu)
 *
 * This file is part of MoveOnApp.
 *
 *    MoveOnApp is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    MoveOnApp is distributed in the hope that it will be useful,
 *    but WITHOUT ANY WARRANTY; without even the implied warranty of
 *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *    Affero GNU General Public License for more details
 *    (https://www.gnu.org/licenses/agpl-3.0.html).
 *    
 *    All the creations are under sanbo package, which is my short surname. 
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/moveonappinicio"
    android:gravity="top"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/text_bottom" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_top" >

        <ImageView
            android:id="@+id/loadingLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
        	android:layout_marginTop="20dp"
            android:contentDescription="@string/descIcon"
            android:src="@drawable/moveon" />

    </RelativeLayout>

    <TextView
        android:id="@+id/loadingVersionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/inicioVersionNumber"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorTexto_Negro"
        android:textSize="@dimen/normal_text_bottom" />

    <TextView
        android:id="@+id/loadingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loadingVersionNumber"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorTexto_AzulOscuro"
        android:textSize="@dimen/mensajeInicio" />

</RelativeLayout>